# telegram-managemet

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
app/: main.py
app/core/: config_manager.py  telegram_manager.py  webhook_manager.py
app/routes/: account.py  auth.py  index.py
app/utils/: serialize_message.py
templates/: add_account.html  base.html  dashboard.html  edit_account.html  events.html  login.html  verify_code.html
